<resources>
    <string name="app_name">ZoloCustomerApp</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">forgot \n password?</string>
    <string name="forgot_pw">Forgot password?</string>
    <string name="please_enter_your_registered_email_id">Please enter your registered email id</string>
    <string name="email_id">EMAIL ID</string>
    <string name="name">NAME</string>
    <string name="register">register</string>
    <string name="please_register_with_zolo_to_continue">Please register with Zolo to continue</string>
    <string name="your_phone_number">YOUR PHONE NUMBER</string>
    <string name="your_email_id">YOUR EMAIL ID</string>
    <string name="your_name">YOUR NAME</string>
    <string name="set_password">SET PASSWORD</string>
    <string name="password">PASSWORD</string>
    <string name="log_in">log in</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Reset password</string>
    <string name="title_activity_profile">Profile</string>
    <string name="update">Update</string>
    <string name="phone_number">PHONE NUMBER</string>
</resources>
