<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.suhaas.zolocustomerapp.ui.ForgotPasswordFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.suhaas.zolocustomerapp.ui.LoginActivityFragment"
        tools:showIn="@layout/activity_login">

        <TextView
            android:id="@+id/tv_logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="top|end"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:layout_margin="16dp"
            android:padding="5dp" />

        <TextView
            android:text="@string/forgot_password"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/please_enter_your_registered_email_id"
            android:textSize="14dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_email"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/yellow_300"
                android:layout_width="260dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_emailId"
                    android:hint="@string/email_id"
                    android:textColor="@color/colorAccent"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_reset_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            android:background="@color/white"
            android:text="@string/reset_password"/>

    </LinearLayout>


</FrameLayout>
