<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context="com.suhaas.zolocustomerapp.ui.RegisterFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.suhaas.zolocustomerapp.ui.LoginActivityFragment"
        tools:showIn="@layout/activity_login">

        <TextView
            android:text="@string/register"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/please_register_with_zolo_to_continue"
            android:textSize="14dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_phone_call"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/yellow_300"
                android:layout_width="260dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phoneNum"
                    android:hint="@string/your_phone_number"
                    android:textColor="@color/colorAccent"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:maxLength="10"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_email"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/yellow_300"
                android:layout_width="260dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_emailId"
                    android:hint="@string/your_email_id"
                    android:textColor="@color/colorAccent"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_name"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/yellow_300"
                android:layout_width="260dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    android:hint="@string/your_name"
                    android:textColor="@color/colorAccent"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_password"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/yellow_300"
                android:layout_width="260dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:hint="@string/set_password"
                    android:textColor="@color/colorAccent"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            android:background="@color/yellow_300"
            android:text="@string/register"/>

    </LinearLayout>


</FrameLayout>
