<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suhaas.zolocustomerapp.ui.profile.ProfileEditFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_phone_call"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/colorPrimary"
                android:layout_width="260dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phoneNum"
                    android:hint="@string/phone_number"
                    android:textColor="@color/colorPrimary"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:maxLength="10"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_email"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/colorPrimary"
                android:layout_width="260dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_emailId"
                    android:hint="@string/email_id"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_name"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/colorPrimary"
                android:layout_width="260dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    android:hint="@string/name"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_update"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            android:background="@color/colorPrimary"
            android:text="@string/update"/>

    </LinearLayout>

</FrameLayout>
